--- a/IOSModelBay/Views/MB_UserCollectViewCell.xib
+++ b/IOSModelBay/Views/MB_UserCollectViewCell.xib
@@ -8,28 +8,43 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="" id="gTV-IL-0wX" customClass="MB_UserCollectViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+            <rect key="frame" x="0.0" y="0.0" width="150" height="180"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                <rect key="frame" x="0.0" y="0.0" width="150" height="180"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HQw-A7-3ua">
-                        <rect key="frame" x="0.0" y="0.0" width="150" height="101"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="b.png" translatesAutoresizingMaskIntoConstraints="NO" id="HQw-A7-3ua">
+                        <rect key="frame" x="0.0" y="0.0" width="150" height="126"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="126" id="OWF-1A-ija"/>
+                        </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="username" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="omb-W1-quc">
-                        <rect key="frame" x="37" y="99" width="76" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="username" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="omb-W1-quc">
+                        <rect key="frame" x="0.0" y="126" width="150" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eYj-TJ-fKl">
-                        <rect key="frame" x="0.0" y="120" width="150" height="30"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eYj-TJ-fKl">
+                        <rect key="frame" x="0.0" y="147" width="150" height="28"/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="eYj-TJ-fKl" secondAttribute="bottom" constant="5" id="8p4-pp-THq"/>
+                <constraint firstItem="HQw-A7-3ua" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="EaL-Fp-TDK"/>
+                <constraint firstAttribute="trailing" secondItem="eYj-TJ-fKl" secondAttribute="trailing" id="Kc7-ov-N6q"/>
+                <constraint firstItem="omb-W1-quc" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Kpf-Kw-dqq"/>
+                <constraint firstAttribute="trailing" secondItem="HQw-A7-3ua" secondAttribute="trailing" id="PlW-Io-bH0"/>
+                <constraint firstItem="eYj-TJ-fKl" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="TjM-RX-YZQ"/>
+                <constraint firstItem="omb-W1-quc" firstAttribute="top" secondItem="HQw-A7-3ua" secondAttribute="bottom" id="ZhE-2K-Ou6"/>
+                <constraint firstAttribute="trailing" secondItem="omb-W1-quc" secondAttribute="trailing" id="cmo-Gu-noW"/>
+                <constraint firstItem="eYj-TJ-fKl" firstAttribute="top" secondItem="omb-W1-quc" secondAttribute="bottom" id="r5B-Da-sPT"/>
+                <constraint firstItem="HQw-A7-3ua" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="z52-i0-Xls"/>
+            </constraints>
             <connections>
                 <outlet property="IconImageView" destination="HQw-A7-3ua" id="Wz9-eH-KWP"/>
                 <outlet property="careerView" destination="eYj-TJ-fKl" id="9ee-PY-on8"/>
@@ -38,4 +53,7 @@
             <point key="canvasLocation" x="716" y="443"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="b.png" width="20" height="20"/>
+    </resources>
 </document>
