--- a/IOSModelBay/Controllers/MB_SelectRoleViewController.xib
+++ b/IOSModelBay/Controllers/MB_SelectRoleViewController.xib
@@ -15,46 +15,96 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="a.png" translatesAutoresizingMaskIntoConstraints="NO" id="ucx-fp-NuC">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TDe-hy-cOC">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="284"/>
-                </imageView>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bNO-Ah-AIv">
-                    <rect key="frame" x="142" y="206" width="46" height="30"/>
-                    <state key="normal" title="Button">
-                        <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                </button>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="a.png" translatesAutoresizingMaskIntoConstraints="NO" id="JRe-2Z-yTm">
+                    <subviews>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="a.png" translatesAutoresizingMaskIntoConstraints="NO" id="ucx-fp-NuC">
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="284"/>
+                        </imageView>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bNO-Ah-AIv">
+                            <rect key="frame" x="137" y="170" width="46" height="30"/>
+                            <state key="normal" title="Button">
+                                <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                        </button>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="i am a professional" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g1l-Or-UW8">
+                            <rect key="frame" x="85" y="104" width="150" height="48"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="150" id="nWw-z9-JOE"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="centerX" secondItem="bNO-Ah-AIv" secondAttribute="centerX" id="5iX-O6-Tqh"/>
+                        <constraint firstAttribute="bottom" secondItem="ucx-fp-NuC" secondAttribute="bottom" id="9Zi-tc-gNl"/>
+                        <constraint firstItem="ucx-fp-NuC" firstAttribute="top" secondItem="TDe-hy-cOC" secondAttribute="top" id="Cay-gP-gWi"/>
+                        <constraint firstItem="g1l-Or-UW8" firstAttribute="top" secondItem="TDe-hy-cOC" secondAttribute="top" constant="104" id="Etj-V4-7c4"/>
+                        <constraint firstItem="ucx-fp-NuC" firstAttribute="leading" secondItem="TDe-hy-cOC" secondAttribute="leading" id="L4p-hQ-lYh"/>
+                        <constraint firstAttribute="centerX" secondItem="g1l-Or-UW8" secondAttribute="centerX" id="QuS-KN-EFO"/>
+                        <constraint firstItem="bNO-Ah-AIv" firstAttribute="top" secondItem="g1l-Or-UW8" secondAttribute="bottom" constant="18" id="VoE-s9-TGT"/>
+                        <constraint firstAttribute="trailing" secondItem="ucx-fp-NuC" secondAttribute="trailing" id="bSk-6g-qDj"/>
+                    </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="11Q-wZ-Fed">
                     <rect key="frame" x="0.0" y="284" width="320" height="284"/>
-                </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g1l-Or-UW8">
-                    <rect key="frame" x="139" y="110" width="28" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sqp-2h-C8R">
-                    <rect key="frame" x="142" y="445" width="46" height="30"/>
-                    <state key="normal" title="Button">
-                        <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="subtitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZI9-xY-6at">
-                    <rect key="frame" x="139" y="397" width="56" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uTG-bP-dLz">
-                    <rect key="frame" x="139" y="354" width="28" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                    <subviews>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="a.png" translatesAutoresizingMaskIntoConstraints="NO" id="JRe-2Z-yTm">
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="284"/>
+                        </imageView>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sqp-2h-C8R">
+                            <rect key="frame" x="137" y="194" width="46" height="30"/>
+                            <state key="normal" title="Button">
+                                <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                        </button>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="subtitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZI9-xY-6at">
+                            <rect key="frame" x="132" y="136" width="56" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="i am a audince" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uTG-bP-dLz">
+                            <rect key="frame" x="85" y="70" width="150" height="24"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="150" id="uSb-DV-zp0"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="centerX" secondItem="uTG-bP-dLz" secondAttribute="centerX" id="GUK-cU-Aed"/>
+                        <constraint firstAttribute="centerX" secondItem="ZI9-xY-6at" secondAttribute="centerX" id="HBh-Gk-BQl"/>
+                        <constraint firstItem="uTG-bP-dLz" firstAttribute="top" secondItem="11Q-wZ-Fed" secondAttribute="top" constant="70" id="Hof-PS-Kre"/>
+                        <constraint firstItem="JRe-2Z-yTm" firstAttribute="leading" secondItem="11Q-wZ-Fed" secondAttribute="leading" id="LgW-C2-vpW"/>
+                        <constraint firstAttribute="centerX" secondItem="sqp-2h-C8R" secondAttribute="centerX" id="QF0-4L-EhE"/>
+                        <constraint firstAttribute="trailing" secondItem="JRe-2Z-yTm" secondAttribute="trailing" id="QLF-5C-SKK"/>
+                        <constraint firstItem="ZI9-xY-6at" firstAttribute="top" secondItem="uTG-bP-dLz" secondAttribute="bottom" constant="42" id="UBD-9X-PGO"/>
+                        <constraint firstAttribute="bottom" secondItem="JRe-2Z-yTm" secondAttribute="bottom" id="VSE-hX-IXx"/>
+                        <constraint firstItem="JRe-2Z-yTm" firstAttribute="top" secondItem="11Q-wZ-Fed" secondAttribute="top" id="cJf-RI-pJn"/>
+                        <constraint firstItem="sqp-2h-C8R" firstAttribute="top" secondItem="ZI9-xY-6at" secondAttribute="bottom" constant="37" id="uon-am-u7K"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="TDe-hy-cOC" secondAttribute="trailing" id="1Yq-u1-T17"/>
+                <constraint firstItem="11Q-wZ-Fed" firstAttribute="height" secondItem="TDe-hy-cOC" secondAttribute="height" id="6Ni-GB-CED"/>
+                <constraint firstItem="11Q-wZ-Fed" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="6m3-L4-RtT"/>
+                <constraint firstItem="TDe-hy-cOC" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="AyX-W6-46H"/>
+                <constraint firstItem="11Q-wZ-Fed" firstAttribute="top" secondItem="TDe-hy-cOC" secondAttribute="bottom" id="Esz-mt-wzy"/>
+                <constraint firstItem="TDe-hy-cOC" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="GVe-Xx-4KG"/>
+                <constraint firstAttribute="trailing" secondItem="11Q-wZ-Fed" secondAttribute="trailing" id="Huo-O1-Nfq"/>
+                <constraint firstAttribute="bottom" secondItem="11Q-wZ-Fed" secondAttribute="bottom" id="arj-ni-iez"/>
+            </constraints>
             <point key="canvasLocation" x="540" y="418"/>
         </view>
     </objects>
