--- a/IOSModelBay/Controllers/MB_WriteInfoViewController.xib
+++ b/IOSModelBay/Controllers/MB_WriteInfoViewController.xib
@@ -15,37 +15,57 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4rA-AG-fMS">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4rA-AG-fMS">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Welcome" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PM0-AH-06t">
-                    <rect key="frame" x="134" y="84" width="71" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PM0-AH-06t">
+                    <rect key="frame" x="125" y="84" width="71" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HPJ-5t-LkX">
-                    <rect key="frame" x="77" y="125" width="172" height="30"/>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HPJ-5t-LkX">
+                    <rect key="frame" x="60" y="125" width="200" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="200" id="Mze-Km-y40"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sDL-ZM-yAR">
-                    <rect key="frame" x="57" y="217" width="34" height="30"/>
-                    <state key="normal" title="Male">
+                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sDL-ZM-yAR">
+                    <rect key="frame" x="33" y="217" width="60" height="22"/>
+                    <state key="normal" title="Male" image="b.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XGz-98-MXj">
-                    <rect key="frame" x="190" y="217" width="50" height="30"/>
-                    <state key="normal" title="Female">
+                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XGz-98-MXj">
+                    <rect key="frame" x="208" y="217" width="79" height="22"/>
+                    <state key="normal" title="Female" image="b.png">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                 </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="PM0-AH-06t" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="84" id="GC7-nN-pjm"/>
+                <constraint firstItem="4rA-AG-fMS" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="XGG-tD-ZB9"/>
+                <constraint firstAttribute="trailing" secondItem="XGz-98-MXj" secondAttribute="trailing" constant="33" id="XlL-Ts-yj9"/>
+                <constraint firstItem="sDL-ZM-yAR" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="33" id="hse-NP-hKr"/>
+                <constraint firstItem="XGz-98-MXj" firstAttribute="top" secondItem="HPJ-5t-LkX" secondAttribute="bottom" constant="62" id="lJA-3a-2jW"/>
+                <constraint firstItem="4rA-AG-fMS" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="lkl-Kl-eKG"/>
+                <constraint firstAttribute="centerX" secondItem="PM0-AH-06t" secondAttribute="centerX" id="nMc-h3-L40"/>
+                <constraint firstItem="HPJ-5t-LkX" firstAttribute="top" secondItem="PM0-AH-06t" secondAttribute="bottom" constant="20" id="oJ8-lY-S83"/>
+                <constraint firstAttribute="trailing" secondItem="4rA-AG-fMS" secondAttribute="trailing" id="pMS-Vl-nnB"/>
+                <constraint firstItem="sDL-ZM-yAR" firstAttribute="top" secondItem="HPJ-5t-LkX" secondAttribute="bottom" constant="62" id="qZ8-wR-anq"/>
+                <constraint firstAttribute="centerX" secondItem="HPJ-5t-LkX" secondAttribute="centerX" id="rcu-vB-6ud"/>
+                <constraint firstAttribute="bottom" secondItem="4rA-AG-fMS" secondAttribute="bottom" id="zLI-rt-LC3"/>
+            </constraints>
             <point key="canvasLocation" x="540" y="418"/>
         </view>
     </objects>
+    <resources>
+        <image name="b.png" width="20" height="20"/>
+    </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
